<resources>
    <string name="app_name">QuizApp</string>
    <string name="questions_main">Preguntas: 1/10</string>
    <string name="score_main">Puntaje: 0 </string>
    <string name="correct_main">Correctas: 5 </string>
    <string name="wrong_main">Incorrectas: 5 </string>
    <string name="pregunta_texto">Aquí va una pregunta</string>
    <string name="radiobutton_answer">RadioButton</string>
    <string name="timer_main">00:30</string>
    <string name="next_button">Siguiente</string>
</resources>