<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#CCF6F0"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtTotalQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="22sp"
        android:text="@string/questions_main"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/score_main"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"/>
        <TextView
            android:id="@+id/txtCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/correct_main"
            />

        <TextView
            android:id="@+id/txtWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="20sp"
            android:text="@string/wrong_main"
            />
        <TextView
            android:id="@+id/txtViewTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="3dp"
            android:layout_marginEnd="3dp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/timer_main"
            />
    </LinearLayout>
</LinearLayout>