<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDDFF8"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".QuizActivity">


    <TextView
        android:id="@+id/txtTotalQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/questions_main"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_horizontal"
            android:text="@string/score_main"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_horizontal"
            android:text="@string/correct_main"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:gravity="center_horizontal"
            android:text="@string/wrong_main"
            android:textAlignment="center"
            android:textColor="#E40C0C"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/question_container_background"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/pregunta_texto"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="10dp">

            <RadioButton
                android:id="@+id/radio_button1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/button_background"
                android:freezesText="true"
                android:text="@string/radiobutton_answer"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/radio_button2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/button_background"
                android:freezesText="true"
                android:padding="5dp"
                android:text="@string/radiobutton_answer"
                android:textColor="#000"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/radio_button3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/button_background"
                android:freezesText="true"
                android:padding="5dp"
                android:text="@string/radiobutton_answer"
                android:textColor="#000"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/radio_button4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/button_background"
                android:freezesText="true"
                android:padding="5dp"
                android:text="@string/radiobutton_answer"
                android:textColor="#000"
                android:textSize="22sp" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:Tint="@color/purple_200"
            android:text="@string/next_button"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:backgroundTint="@color/purple_200"
            app:strokeColor="#9C27B0"
            app:strokeWidth="3dp" />
    </LinearLayout>

</LinearLayout>